syntax = "proto3";

option csharp_namespace = "TestProviderSample.Grains";

message CounterValue
{
	int32 Value = 1;
}